tests/snapshots/tui_snapshot_tests__snapshot_command_mode.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ears v1.0.0 │ Status: ○ Idle                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Status │ ▸ Configuration │ ▸ Logs │ ▸ Live                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Status ──────────────────────────────────────────────────────────────────────┐
│                                                                              │
│Current State: Idle                                                           │
│Model: unknown                                                                │
│Server: http://whisper.example.com/                                           │
│Device: alsa_input.usb-HP__Inc_HyperX_Cloud_II_Wireless_0-00.mono-fallback    │
│Language: no                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│:quit_                                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
