tests/snapshots/tui_snapshot_tests__snapshot_initial_state.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ears vX.X.X │ Status: ◉ VAD Active (external)                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Configuration │ ▸ Logs │ ▸ Live                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Configuration ───────────────────────────────────────────────────────────────┐
│                                                                              │
│Profile: default [Shift+P]                                                    │
│                                                                              │
│Server URL: http://127.0.0.1:8178/ [e]                                        │
│                                                                              │
│Model: [MODEL]                                                        │
│                                                                              │
│Audio Device: default [d]                                                     │
│                                                                              │
│Language: auto (Shift+L to cycle)                                             │
│                                                                              │
│                                                                              │
│Text Filters:                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[P] Profile  [e] URL  [d] Device  [L] Lang  [f] Lower  [p] Punct  [n] Enter  [│
└──────────────────────────────────────────────────────────────────────────────┘
