tests/snapshots/tui_snapshot_tests__snapshot_logs_panel_with_content.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ears v1.1.0 │ Status: ○ Idle                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ▸ Status │ ▸ Configuration │ ▸ Logs │ ▸ Live                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────────────────────────┐
│2024-01-04 12:00:00 - Recording started                                                           │
│2024-01-04 12:00:05 - Transcription: Hello world                                                  │
│2024-01-04 12:00:10 - Recording stopped                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│[Space] Start/Stop  [v] VAD  [Tab] Panels  [j/k] Scroll  [q] Quit                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
