tests/snapshots/tui_snapshot_tests__snapshot_recording_state.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ears v1.1.0 │ Status: ● Recording (42s)                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Status │ ▸ Configuration │ ▸ Logs │ ▸ Live                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Status ──────────────────────────────────────────────────────────────────────┐
│                                                                              │
│Current State: Recording                                                      │
│Model: unknown                                                                │
│Server: http://127.0.0.1:8178/                                                │
│Device: alsa_input.usb-HP__Inc_HyperX_Cloud_II_Wireless_0-00.mono-fallback    │
│Language: auto                                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[Space] Start/Stop  [v] VAD  [Tab] Panels  [j/k] Scroll  [q] Quit             │
└──────────────────────────────────────────────────────────────────────────────┘
