tests/snapshots/tui_snapshot_tests__snapshot_small_terminal.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────┐
┌──────────────────────────────────────────────────────────┐
┌ Status ──────────────────────────────────────────────────┐
│                                                          │
│Current State: Idle                                       │
│Model: unknown                                            │
│Server: http://localhost:9999/                            │
│Device: alsa_input.usb-HP__Inc_HyperX_Cloud_II_Wireless_0-│
│Language: no                                              │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│[Space] Start/Stop  [v] VAD  [Tab] Panels  [j/k] Scroll  [│
└──────────────────────────────────────────────────────────┘
