tests/snapshots/tui_snapshot_tests__snapshot_status_panel.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ EARS  vX.X.X  ·  speech recognition for linux                                            ○  Idle │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ▸ Configuration │ ▸ Logs │ ▸ Live                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Configuration ───────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│Profile: default [Shift+P]                                                                        │
│                                                                                                  │
│Server URL: http://127.0.0.1:8178/ [e]                                                            │
│                                                                                                  │
│Model: [MODEL]                                                                            │
│                                                                                                  │
│Audio Device: default [d]                                                                         │
│                                                                                                  │
│Language: auto (Shift+L to cycle)                                                                 │
│                                                                                                  │
│                                                                                                  │
│Text Filters:                                                                                     │
│  [ ] Lowercase [f]                                                                               │
│  [ ] Remove Punctuation [p]                                                                      │
│  [x] Strict Alphabet [s]                                                                         │
│                                                                                                  │
│Typing Settings:                                                                                  │
│  [ ] Progressive Typing [t]                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│[P] Profile  [e] URL  [d] Device  [L] Lang  [f] Lower  [p] Punct  [n] Enter  [o/O] Ghost  [q] Quit│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
