tests/snapshots/tui_snapshot_tests__snapshot_vad_active_state.snap
---
source: tests/tui_snapshot_tests.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ears vX.X.X │ Status: ◉ VAD Active                                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Configuration │ ▸ Logs │ ▸ Live                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Live Transcription ──────────────────────────────────────────────────────────┐
│                                                                              │
│VAD Mode: ● Active                                                            │
│                                                                              │
│Transcription:                                                                │
│                                                                              │
│  Listening...                                                                │
│                                                                              │
│  (gray = uncommitted)                                                        │
│                                                                              │
│                                                                              │
│Settings:                                                                     │
│  [ ] Progressive Typing [t]                                                  │
│  [ ] Auto-correction [a]                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[Space/v] VAD  [t] Typing  [a] Auto-corr  [q] Quit                            │
└──────────────────────────────────────────────────────────────────────────────┘
